--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -30,7 +30,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div id="dismiss">
-                <i class="fas fa-arrow-left"></i>
+                <i class="fas fa-arrow-left fa-2x"></i>
             </div>
 
             <div class="sidebar-header">
